# C-Alpha

./: .clang-format  .clang-tidy  .gitignore  BOOTSTRAP_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  ISSUE_FIXES_SUMMARY.md  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  dir_2e22b6c48245e807c829f4089123c2e2.html  dir_2e22b6c48245e807c829f4089123c2e2.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  files_dup.js  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  inherit_graph_15.map  (+40 more)
.github/workflows/: ci.yml
alpha/: Skizze.calpha  bit_test.calpha  casting_test.calpha  example.calpha  printf_example.calpha
d0/d13/: classcalpha_1_1FunctionDeclaration-members.html
d0/d16/: classcalpha_1_1BinaryExpression-members.html
d0/d2e/: lexer_8hpp_source.html
d0/d30/: md_README.html
d0/d32/: classcalpha_1_1Identifier__coll__graph.map
d0/d37/: classcalpha_1_1Parser.html  classcalpha_1_1Parser.js
d0/d39/: classcalpha_1_1Parser_1_1ParseError.html
d0/d3d/: classcalpha_1_1ArrayAllocation__coll__graph.map  classcalpha_1_1ArrayAllocation__coll__graph.md5
d0/d44/: classcalpha_1_1LayoutInitialization__inherit__graph.map
d0/d75/: classcalpha_1_1VariableDeclaration__coll__graph.md5
d0/d84/: classcalpha_1_1Type.html
d0/d8d/: json__rpc__handler_8cpp_source.html
d0/da0/: classcalpha_1_1LayoutSemanticType__inherit__graph.map  classcalpha_1_1LayoutSemanticType__inherit__graph.md5
d0/db6/: classcalpha_1_1Parameter.html
d1/d46/: parser_8hpp_source.html
extra/: main.cpp
include/: codegen.hpp  lexer.hpp  parser.hpp  preprocessor.hpp  semantic.hpp
lsp/: json_rpc_handler.cpp  json_rpc_handler.hpp  json_serialization.cpp  lsp_server.cpp  lsp_server.hpp  main.cpp  notification_handler.cpp  notification_handler.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  pages_0.js  pages_1.js  searchdata.js
src/: codegen.cpp  lexer.cpp  parser.cpp  preprocessor.cpp  semantic.cpp
tests/: debug_symbols.cpp  debug_test.cpp  test_codegen.cpp  test_compiler.cpp  test_debug.cpp  test_issue_8.cpp  test_issue_8_simple.cpp  test_layout_types.cpp  test_semantic.cpp  test_syscall.cpp
vscode-calpha/: language-configuration.json  package-lock.json  package.json  tsconfig.json  vscode-calpha-0.0.1.vsix  vscode-calpha-0.0.2.vsix  vscode-calpha-1.0.0.vsix
(+235 files in other folders)
